--- a/style.css
+++ b/style.css
@@ -492,22 +492,14 @@ body {
     box-shadow: 0 4px 12px rgba(52, 152, 219, 0.3);
 } 
 
+/* Registrationform Form */
 #registration {
     width: 100%;
     margin: 20px auto;
     padding: 20px;
-    background-image: url('assets/bg-8.webp');
+    background-image: url(/assets/bg-8.webp);
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-#registrationform h2 {
-    text-align: center;
-    color: #fff;
-    font-size: 2rem;
-    margin-bottom: 20px;
-}
-
 #registrationform {
     color: rgb(255, 255, 255);
     font-size: 1.2rem;
@@ -519,41 +511,103 @@ body {
     box-shadow: 0 0 10px rgba(120, 236, 203, 0.674);
 }
 
-#registrationform label {
-    display: block;
-    margin-bottom: 5px;
+#registrationform h2 {
+    text-align: center;
+    color: #fff;
+    font-size: 2rem;
+    margin-bottom: 20px;
 }
 
-#registrationform input,
-#registrationform select,
-#registrationform textarea {
+#registrationform label{
+    color: #fff;
+    font-family: Arial, sans-serif;
+
+}
+
+#registrationform span {
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+
+}
+
+#registrationform input[type="text"] {
     width: 100%;
     padding: 10px;
+    color: black;
+    font-family: Arial, sans-serif;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+
+}
+
+#registrationform input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    color: black;
+    font-family: Arial, sans-serif;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#registrationform input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    color: black;
+    font-family: Arial, sans-serif;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+
+}
+
+#registrationform select {
+    width: 100%;
+    padding: 10px;
+    color: black;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 #registrationform textarea {
-    height: 100px;
+    width: 100%;
+    padding: 10px;
+
+    color: black;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 #registrationform button {
-    padding: 10px 20px;
+    width: 100%;
+    padding: 10px;
     background-color: #2d87ed;
-    color: white;
-    border: none;
-    border-radius: 5px;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
     cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 #registrationform button:hover {
     background-color: #71e4ee;
 }
 
-.error {
+#registrationform input[type="radio"] {
+    margin-right: 5px;
+}
+#registration .error {
     color: red;
-    font-size: 0.9rem;
+    font-size: 14px;
     display: block;
 }
 
