--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ body {
     width: 100%;
     margin: 20px auto;
     padding: 20px;
-    background-image: url('assets/bg-11.jpg');
+    background-image: url('assets/bg-8.webg');
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
